# win32_tui_c

./: CMakeLists.txt
.cache/clangd/index/: events.c.3CD20B8797EF5820.idx  events.h.0C3F0C3FCE2B2AA8.idx  main.c.5F5CEEE32A400DA9.idx  main.h.7A4A7A4FA2DB2196.idx  term_pos.c.A43CDBF42F608036.idx  term_pos.h.9F9EE91B105D4E71.idx  thread.c.1AA46F6E7C7310CB.idx  thread.h.90DCBB901E4FD7C6.idx  ui.c.547A599D6E33F42F.idx  ui.h.7FC083D020EB0469.idx  utils.c.0E0F254BE57AF210.idx  utils.h.247263D6DD9100BA.idx
src/: events.c  events.h  main.c  main.h  term_pos.c  term_pos.h  thread.c  thread.h  ui.c  ui.h  utils.h
